# croco-selenium

./: README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
croco_selenium/: __init__.py  _croco_driver.py  action_performer.py  actions.py  chrome_driver.py  decorators.py  exceptions.py  types.py  utils.py
tests/: test_chrome_driver.py  test_decorators.py  test_utils.py
