[build-system]
requires = ["setuptools>=61.0", "selenium>=4.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "croco-selenium"
version = "0.9.0"
authors = [
    { name = "Alexey", email = "abelenkov2006@gmail.com" },
]
description = "The package providing ways to interact with Selenium Web Driver actions, such as clicking, sending keys etc."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS'
]

[project.urls]
source = "https://github.com/blnkoff/croco-selenium"