[tool.poetry]
name = 'croco_selenium'
version = '0.1.2'
description = 'The package providing ways to interact with Selenium Web Driver actions, such as clicking, sending keys etc.'
authors = ['Alexey <abelenkov2006@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/blnkoff/croco-selenium'
homepage = 'https://github.com/blnkoff/croco-selenium'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS'
]
packages = [{ include = 'croco_selenium' }]

[tool.poetry.dependencies]
python = '^3.11'
selenium = "^4.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
twine = "^4.0.2"
build = "^1.0.3"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
